--- a/FitnessApp/app/app.css
+++ b/FitnessApp/app/app.css
@@ -1,1 +1,10 @@
 @import "nativescript-theme-core/css/core.light.css";
+@import url("~/platform.css");
+Page {
+    background-color: white;
+    font-size: 15;
+  }
+  TextField {
+    padding: 10;
+    font-size: 13;
+  }
