--- a/FitnessApp/app/dashboard/dashboard.component.html
+++ b/FitnessApp/app/dashboard/dashboard.component.html
@@ -1,3 +1,12 @@
+<ActionBar title="ActionBar">
+        <StackLayout orientation="horizontal"
+        ios:horizontalAlignment="center"
+        android:horizontalAlignment="left">
+        <Label text="FitnessApp"  class="action-label"></Label>
+        <Button class="btn btn-primary btn-active submit-button" (tap)="logOut()" id="button" text="Sign Out"></Button>
+      </StackLayout>
+</ActionBar>
+
 <StackLayout>
     <Image src="~/images/login.png"></Image>
     <TextField text="Welcome To Dashboard"></TextField>
