--- a/FitnessApp/app/login/login.component.html
+++ b/FitnessApp/app/login/login.component.html
@@ -1,9 +1,4 @@
 <StackLayout>
     <Image src="~/images/login.png"></Image>
-    <TextField hint="Email Address" keyboardType="email"
-               autocorrect="false" autocapitalizationType="none"></TextField>
-    <TextField hint="Password" secure="true"></TextField>
-
-    <Button class="btn btn-primary btn-active submit-button" (tap)="login()" id="button" text="Sign in"></Button>
-    <Button text="Sign up"></Button>
+    <Button class="btn btn-primary btn-active submit-button" (tap)="onGoogleLogin()" id="button" text="Sign in with Google"></Button>
 </StackLayout>
