Latest Changes with Dummy for Facebook

--- a/FitnessApp/app/login/login.component.html
+++ b/FitnessApp/app/login/login.component.html
@@ -1,4 +1,5 @@
 <StackLayout>
     <Image src="~/images/login.png"></Image>
     <Button class="btn btn-primary btn-active submit-button" (tap)="onGoogleLogin()" id="button" text="Sign in with Google"></Button>
+    <Button class="btn btn-primary btn-active submit-button" (tap)="onFacebookLogin()" id="button" text="Sign in with Facebook"></Button>
 </StackLayout>
