--- a/FitnessApp/app/login/login.component.css
+++ b/FitnessApp/app/login/login.component.css
@@ -8,7 +8,7 @@ StackLayout {
     margin-top: 5;
     margin-bottom: 20;
   }
-  Button, TextField {
+  TextField {
     margin-left: 16;
     margin-right: 16;
     margin-bottom: 10;
