With Action Items Button

--- a/FitnessApp/app/australia/australia.component.html
+++ b/FitnessApp/app/australia/australia.component.html
@@ -1,13 +1,15 @@
+<StackLayout>
 <ActionBar title="ActionBar">
     <DockLayout orientation="horizontal"
         ios:horizontalAlignment="center"
         android:horizontalAlignment="left">
+        <NavigationButton text="Go Back"></NavigationButton>
         <Label text="Australia"  class="action-label"></Label>
         <Button class="btn btn-primary btn-active submit-button" (tap)="logOut()" dock="right" text="Sign Out"></Button>
     </DockLayout>
 </ActionBar>
     
-<StackLayout>
+
     <RadDataForm [source]="album">
         <TKEntityProperty tkDataFormProperty name="albumName" displayName="Name of Album" index="0"></TKEntityProperty>
         <TKEntityProperty tkDataFormProperty name="bandName" displayName="Name of Band" index="1"></TKEntityProperty>
